# microshell

./: .gitignore  LICENSE.md  README.md  REPRODUCE.md  compile_hw.sh  compile_sw.sh  extract_csv.sh  extract_util.tcl  measure_complexity.sh  program_fpga.sh  shell.nix
examples_hw/: CMakeLists.txt
examples_hw/SVM HLS/: README.md  main.c  svm_speech_30.c  svm_speech_30.h
examples_hw/apps/1dfft/: vfpga_top.svh
examples_hw/apps/1difft/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/2dfft/: vfpga_top.svh
examples_hw/apps/aes_ctr/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/aes_ctr/hdl/: panic_define.v  table.v
examples_hw/apps/audio/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/audio/hdl/: fft_top.sv  quant_top.sv
examples_hw/apps/audio_processing/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/audio_processing/hdl/: fft_top.sv  quant_top.sv  rle_top.sv
examples_hw/apps/conv/: vfpga_top.svh
examples_hw/apps/conv/hdl/: FIFO.sv  HullFIFO.sv  conv.v  (+3 more)
examples_hw/apps/digi/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/digital_signature/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/fft/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/fft2svm/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/ifft/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/letterbox/: vfpga_top.svh
examples_hw/apps/md5/: vfpga_top.svh
examples_hw/apps/mul/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/perf_counter/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/perf_fpga/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/perf_local/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/perf_local /: init_ip.tcl  vfpga_top.svh
examples_hw/apps/perf_local_2/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/quant/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/rle/: vfpga_top.svh
examples_hw/apps/rsa/: vfpga_top.svh
examples_hw/apps/rsa_module/: init_ip.tcl  main.cpp  rsa_tb.v  vfpga_top.svh
examples_hw/apps/secure/: vfpga_top.svh
examples_hw/apps/secure2/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/secure_storage/: vfpga_top.svh
examples_hw/apps/sha2/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/sha256/: vfpga_top.svh
examples_hw/apps/sha2_module/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/signcomp/: vfpga_top.svh
examples_hw/apps/signed_compression/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/speech/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/speech_recognition/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/svm/: init_ip.tcl  main.cpp  vfpga_top.svh
examples_hw/apps/svm_speech/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/test/: init_ip.tcl  vfpga_top.svh
examples_hw/build_hw_8/: CMakeCache.txt  Makefile  base.tcl  cmake_install.cmake  comp_hls.tcl  config.tcl  cr_sim.tcl  export.cmake  flow_app.tcl  flow_app_prjct.tcl  flow_bitgen.tcl  flow_comp.tcl  flow_dyn.tcl  flow_link.tcl  flow_shell_prjct.tcl  flow_static_prjct.tcl  flow_synth_shell.tcl  flow_synth_static.tcl  flow_synth_user.tcl  package.tcl  replace.py  synth_shell.tcl  synth_user.tcl  tight_setup_hold_pins.txt  vivado.jou  vivado_246750.backup.jou  vivado_254572.backup.jou  vivado_279683.backup.jou  vivado_291178.backup.jou  vivado_297078.backup.jou  vivado_3323902.backup.jou  vivado_3325275.backup.jou  vivado_3351081.backup.jou  vivado_3362539.backup.jou  vivado_3368244.backup.jou  write_hdl.py
examples_hw/build_hw_8/bitstreams/: shell_top.ltx
examples_hw/build_hw_8/hd_visual/: blockedBelsOutputs.tcl  blockedBelsRouteThrus.tcl  blockedPins.tcl  blockedSitesInputs.tcl
examples_hw/build_hw_8/reports/: shell_drc_bitstream_checks.rpt  shell_route_status.rpt  shell_timing_summary.rpt  shell_utilization.rpt
examples_hw/build_hw_8/test_shell/: test.xpr
examples_hw/svm/: init_ip.tcl
examples_sw/: CMakeLists.txt
examples_sw/apps/1dfft/: main.cpp
examples_sw/apps/1difft/: main.cpp
examples_sw/apps/2dfft/: main.cpp
examples_sw/apps/2difft/: main.cpp
examples_sw/apps/aes/: main.cpp
examples_sw/apps/aes_ctr/: main.cpp
examples_sw/apps/audio/: main.cpp
examples_sw/apps/audio_mono/: main.cpp
examples_sw/apps/audio_processing/: main.cpp
examples_sw/apps/audio_processing_cpusync/: main.cpp
examples_sw/apps/audio_processing_monolithic/: main.cpp
examples_sw/apps/conv/: main.cpp
examples_sw/apps/digi_sign/: main.cpp
examples_sw/apps/digi_sign_cpu/: main.cpp
examples_sw/apps/digi_sign_mono/: main.cpp
examples_sw/apps/digital_signature/: main.cpp
examples_sw/apps/digital_signature_cpusync/: main.cpp
examples_sw/apps/digital_signature_monolithic/: main.cpp
examples_sw/apps/fft/: main.cpp
examples_sw/apps/fft2svm/: main.cpp
examples_sw/apps/hll/: main.cpp
examples_sw/apps/ifft/: main.cpp
examples_sw/apps/letterbox/: main.cpp
examples_sw/apps/md5/: main.cpp
examples_sw/apps/mul/: main.cpp
examples_sw/apps/perf_counter/: main.cpp
examples_sw/apps/perf_fpga/: main.cpp
examples_sw/apps/perf_local/: main.cpp
examples_sw/apps/perf_mem/: main.cpp
examples_sw/apps/pipeline/: main.cpp
examples_sw/apps/quant/: main.cpp
examples_sw/apps/reconfigure_shell/: main.cpp
examples_sw/apps/rle/: main.cpp
examples_sw/apps/rsa/: main.cpp
examples_sw/apps/secure/: main.cpp
examples_sw/apps/secure2/: main.cpp
examples_sw/apps/secure_mono/: main.cpp
examples_sw/apps/secure_storage/: main.cpp
examples_sw/apps/secure_storage_cpusync/: main.cpp
examples_sw/apps/secure_storage_monolithic/: main.cpp
examples_sw/apps/sha/: main.cpp
examples_sw/apps/sha2/: main.cpp
examples_sw/apps/signcomp/: main.cpp
examples_sw/apps/signcomp_cpu/: main.cpp
examples_sw/apps/signcomp_mono/: main.cpp
examples_sw/apps/signed_compression/: main.cpp
examples_sw/apps/signed_compression_cpusync/: main.cpp
examples_sw/apps/signed_compression_monolithic/: main.cpp
examples_sw/apps/speech/: main.cpp
examples_sw/apps/speech_cpu/: main.cpp
examples_sw/apps/speech_mono/: main.cpp
examples_sw/apps/speech_recognition/: main.cpp
examples_sw/apps/speech_recognition_cpusync/: main.cpp
examples_sw/apps/speech_recognition_monolithic/: main.cpp
examples_sw/apps/svm/: main.cpp
(+2833 files in other folders)
